--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,44 +1,44 @@
-name = "ujang" # todo
+name = "user" # todo
 main = "_worker.js"
 compatibility_date = "2024-05-26"
 
 [[routes]]
-pattern = "budakbaong.my.id"
+pattern = "user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.budakbaong.my.id"
+pattern = "ava.game.naver.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.budakbaong.my.id"
+pattern = "graph.instagram.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.budakbaong.my.id"
+pattern = "quiz.int.vidio.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "live.iflix.com.vcip.bmkg.xyz"
+pattern = "live.iflix.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.budakbaong.my.id"
+pattern = "support.zoom.us.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.budakbaong.my.id"
+pattern = "blog.webex.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.budakbaong.my.id"
+pattern = "investors.spotify.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "cache.netflix.com.budakbaong.my.id"
+pattern = "cache.netflix.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "zaintest.vuclip.com.budakbaong.my.id"
+pattern = "zaintest.vuclip.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "io.ruangguru.com.budakbaong.my.id"
+pattern = "ads.ruangguru.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "business.blibli.com.budakbaong.my.id"
+pattern = "business.blibli.com.user.cepu.us.kg"
 custom_domain = true
 [[routes]]
-pattern = "api.midtrans.com.budakbaong.my.id"
+pattern = "api.midtrans.com.user.cepu.us.kg"
 custom_domain = true
 
