--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "edtunnel",
+  "name": "bedebah",
   "version": "1.0.0",
   "description": "A tunnel for the edgetunnel project to allow deployed applications to cloudflare pages and workers to be accessed via a custom domain.",
-  "main": "_worker.js",
+  "main": "cf/_worker.js",
   "scripts": {
     "deploy": "wrangler deploy",
     "build": "wrangler deploy --dry-run",
